--- a/index.html
+++ b/index.html
@@ -298,7 +298,10 @@
         <h1>premier</h1>
         <h5>Models</h5>
         <h5>Women/Man</h5>
-        <h5>Agency/ Blog/ Information/Contact us</h5>
+        <h5>
+          Agency/ Blog/ Information/Contact us <br />
+          &copy All content copywright.
+        </h5>
       </div>
     </div>
   </body>
